kaas-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaas-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaas-api
  template:
    metadata:
      labels:
        app: kaas-api
    spec:
      serviceAccountName: kaas-api-service-account
      containers:
        - name: kaas-api
          image: kaas-api:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2024
          volumeMounts:
            - name: kube-config-volume
              mountPath: /root/.kube
              readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
      volumes:
        - name: kube-config-volume
          hostPath:
            path: /home/sepehr/.kube
